DIY 30 // Fixed an issue in the traffic types and added comments

--- a/app/areaSpecificationForm/areaSpecificationForm.component.html
+++ b/app/areaSpecificationForm/areaSpecificationForm.component.html
@@ -136,7 +136,7 @@
             <td>
                Data Sources<br>
                <input type="checkbox">Foursquare<br>
-               <input type="checkbox">LSGMI Custom
+               <input type="checkbox" disabled>LSGMI Custom
             </td>
             <td>
                 <div class="categoryTable">
@@ -233,7 +233,7 @@
         </tr>
         <tr>
             <td></td>
-            <td>(example: 90036, 90048)</td>
+            <td>(example: 90036, 90048, Chicago)</td>
         </tr>
 		<tr>
             <td colspan="3"><hr></td>
