DIY 31 // Consume the service to save Activity Type

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,1 +1,4 @@
+<div class="page-header">
+   <h1 style="text-align:center">Mobile Location Settings</h1>
+</div>
 <areaSpecificationForm></areaSpecificationForm>
