DIY-41 // CSS Fix

--- a/app/areaSpecificationForm/selectedCategoryList/selectedCategory/selectedCategory.component.html
+++ b/app/areaSpecificationForm/selectedCategoryList/selectedCategory/selectedCategory.component.html
@@ -1,4 +1,4 @@
 <div>
-    <h5 style="display: inline">{{category.name}}</h5>
+    <h5 class="categoryName">{{category.name}}</h5>
     <button class="glyphicon glyphicon-remove" (click)="onDelete($event)"></button>
 </div>
