--- a/app/areaSpecificationForm/areaSpecificationForm.component.html
+++ b/app/areaSpecificationForm/areaSpecificationForm.component.html
@@ -82,7 +82,7 @@
                 </select>
             </td>
         </tr>
-        <tr id="daysAndTimes" [hidden]="triggerScheduleSelectedValue == 'anyDayTime'">
+        <tr id="daysAndTimes" *ngIf="triggerScheduleSelectedValue != 'anyDayTime'">
             <td></td>
             <td>
                 <div id="floatStyling">
@@ -158,7 +158,7 @@
         </tr>
         <tr>
             <td>
-                <h6 [hidden]="selectedCategories.length == 0" >YOU SELECTED</h6>
+                <h6 *ngIf="selectedCategories.length != 0" >YOU SELECTED</h6>
             </td>
             <td>
                 <selectedCategoryList (remove)="onCategorySelect($event)" [categoryList]="selectedCategories"></selectedCategoryList>
@@ -271,7 +271,7 @@
                 <p>Restricts the number of completes allowed per location.  Once the number of completes are met, the location will no longer be displayed on users survey list</p>
 						</td>
 					</tr>
-        <tr id="quotasPerCategory" [hidden]="!quotaTypePerCategory || selectedCategories.length == 0" >
+        <tr id="quotasPerCategory" *ngIf="quotaTypePerCategory && selectedCategories.length != 0" >
             <td></td>
             <td>
                 <table>
