--- a/app/areaSpecificationForm/areaSpecificationForm.component.css
+++ b/app/areaSpecificationForm/areaSpecificationForm.component.css
@@ -77,3 +77,54 @@ tr
 #floatStyling{
     float: left;
 }
+
+/* Style the list */
+ul.tab {
+    overflow: hidden;
+    text-align: center;
+}
+
+ul.tab li {display:inline-block;}
+
+/* Style the links inside the list items */
+ul.tab li a {
+    display: inline-block;
+    color: gray;
+    text-align: center;
+    padding: 2px 2px;
+    margin-right: 16px;
+    transition: 0.3s;
+    font-size: 17px;
+    text-decoration: none;
+    font-family: Calibri;
+}
+
+/* Change background color of links on hover */
+ul.tab li a:hover {background-color: #ddd;}
+
+/* Create an active/current tablink class */
+ul.tab li a:focus, .active {
+    border-bottom: 2px solid;
+    border-bottom-color: #F5811A;
+    color: black;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+    -webkit-animation: fadeEffect 1s;
+    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+
+@-webkit-keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
