DIY-81 // Apply the proper style required for the page's title and main information header

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,6 +1,9 @@
-<div class="page-header">
-   <h1 class="webSiteTitleStyle">Mobile Location Settings</h1>
+<div class="webSiteTitleStyle">
+   <img class="lightspeedLogo" src="images/Lightspeed logo.png">
+   <h1>Mobile Location Settings</h1>
 </div>
+<h1 class="mainInformation">PROPOSAL <span class="biggerFont">{{proposalId}}</span>&nbsp;&nbsp;&nbsp;&nbsp;PROJECT <span class="biggerFont">{{projectId}}</span></h1>
+<br>
 <div *ngIf="page=='mainPage'">
    <mainSettingsForm></mainSettingsForm>
 </div>
