--- a/app/app.component.css
+++ b/app/app.component.css
@@ -1,13 +1,6 @@
 .titleStyle{
     text-align: center;
 }
-.proposalIdStyle{
-    display: inline-block;
-}
-.projectIdStyle{
-    display: inline-block;
-    margin-left: 80px;
-}
 * {
     margin: 0;
 }
@@ -38,7 +31,7 @@ html, body {
 
 button {
     border: none;
-    font-size: 18px;
+    font-size: 17px;
     color: #FFFFFF;
     text-align: center;
     -webkit-transition-duration: 0.4s; /* Safari */
@@ -56,7 +49,6 @@ button {
     right:30px;
     width: 130px;
     top: 13px;
-
 }
 
 .secondaryButton {
@@ -65,9 +57,40 @@ button {
     left: 30px;
     width: 100px;
     top: 13px;
-
 }
 
+.lightspeedLogo{
+    position: absolute;
+    left: 30px;
+    top: 25px;
+    display: inline-block;
+    height:18.24px;
+    width:136.32px;
+}
 .webSiteTitleStyle{
     text-align: center;
+    background: #F0F0F0;
+    font-family: Calibri;
+    color: #7F7F7F;
+    height:64.32px;
+
+}
+.webSiteTitleStyle h1{
+    font-size: 24px;
+    vertical-align: middle;
+    line-height: 64.32px;
+}
+.mainInformation{
+    background-color: #A6A6A6;
+    color: white;
+    font-family: Calibri;
+    font-size: 17px;
+    text-align: center;
+    height: 52.8px;
+    vertical-align: middle;
+    line-height: 52.8px;
+}
+
+.biggerFont{
+    font-size: 24px;
 }
