Code refactoring and adding comments where needed

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -11,6 +11,6 @@
    <areaSpecificationForm (tabChanged)="updateSelectedPage($event)"></areaSpecificationForm>
 </div>
 <footer class="site-footer">
-   <button id="secondaryButton" class="secondaryButton" (click)="secondaryButtonClicked()">Cancel</button>
+   <button id="secondaryButton backButton" class="secondaryButton" (click)="secondaryButtonClicked()">Cancel</button>
    <button id="defaultButton" class="defaultButton" (click)="defaultButtonClicked()">Save Project</button>
 </footer>
