--- a/app/app.component.css
+++ b/app/app.component.css
@@ -1,35 +1,34 @@
 .titleStyle{
     text-align: center;
 }
-* {
+*{
     margin: 0;
 }
-html, body {
+html, body{
     height: 100%;
 }
-.page-wrap {
+.page-wrap{
     min-height: 100%;
     margin-bottom: -60px;
 }
-.page-wrap:after {
+.page-wrap:after{
     content: "";
     display: block;
 }
-.site-footer, .page-wrap:after {
+.site-footer, .page-wrap:after{
     height: 60px;
 }
-.site-footer {
+.site-footer{
     background: #F0F0F0;
     height: 60px;
     vertical-align: middle;
     display: inline-block;
     position: absolute;
     bottom: 0px;
-    right:0px;
-    left:0px;
+    right: 0px;
+    left: 0px;
 }
-
-button {
+button{
     border: none;
     font-size: 17px;
     color: #FFFFFF;
@@ -42,37 +41,40 @@ button {
     height: 35px;
     font-family: Calibri;
 }
-
 .defaultButton{
     background-color: #F5811A;
     position: absolute;
-    right:30px;
+    right: 30px;
     width: 130px;
     top: 13px;
 }
-
-.secondaryButton {
+.secondaryButton{
     background-color: #A6A6A6;
     position: absolute;
     left: 30px;
     width: 100px;
     top: 13px;
 }
-
+.backButton{
+    padding: 8px 8px 8px 32px;
+    background: #f0f0f0 url(images/Lightspeed logo.png);
+    background-position: 8px 8px;
+    background-repeat: no-repeat;
+}
 .lightspeedLogo{
     position: absolute;
     left: 30px;
     top: 25px;
     display: inline-block;
-    height:18.24px;
-    width:136.32px;
+    height: 18.24px;
+    width: 136.32px;
 }
 .webSiteTitleStyle{
     text-align: center;
     background: #F0F0F0;
     font-family: Calibri;
     color: #7F7F7F;
-    height:64.32px;
+    height: 64.32px;
 
 }
 .webSiteTitleStyle h1{
@@ -90,7 +92,6 @@ button {
     vertical-align: middle;
     line-height: 52.8px;
 }
-
 .biggerFont{
     font-size: 24px;
 }
