--- a/app/areaSpecificationForm/areaSpecificationForm.component.html
+++ b/app/areaSpecificationForm/areaSpecificationForm.component.html
@@ -428,9 +428,9 @@
         </table>
     </form>
 </div>
-<div id="tab0" class="tabcontent">
-    YOU ARE IN FIRST TAB
-</div>
+
+<geofencingModel id="tab0" class="tabcontent"></geofencingModel>
+
 <div id="tab1" class="tabcontent">
     YOU ARE IN GEOFENCE TRIGGER OPTIONS TAB
 </div>
