--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="webSiteTitleStyle">
+
    <img class="lightspeedLogo" src="images/Lightspeed logo.png">
    <h1>Mobile Location Settings</h1>
 </div>
@@ -11,6 +12,6 @@
    <areaSpecificationForm (tabChanged)="updateSelectedPage($event)"></areaSpecificationForm>
 </div>
 <footer class="site-footer">
-   <button id="secondaryButton backButton" class="secondaryButton" (click)="secondaryButtonClicked()">Cancel</button>
-   <button id="defaultButton" class="defaultButton" (click)="defaultButtonClicked()">Save Project</button>
+   <button id="secondaryButton" class="secondaryButton" (click)="secondaryButtonClicked()"><span id="secondaryButtonSpan">Cancel</span></button>
+   <button id="defaultButton" class="defaultButton" (click)="defaultButtonClicked()"><span id="defaultButtonSpan">Save Project</span></button>
 </footer>
