--- a/app/areaSpecificationForm/areaSpecificationForm.component.html
+++ b/app/areaSpecificationForm/areaSpecificationForm.component.html
@@ -429,7 +429,7 @@
     </form>
 </div>
 
-<geofencingModel id="tab0" class="tabcontent"></geofencingModel>
+<geofencingModel id="tab0" class="tabcontent" [settingsDetails]="settingsDetails"></geofencingModel>
 
 <div id="tab1" class="tabcontent">
     YOU ARE IN GEOFENCE TRIGGER OPTIONS TAB
@@ -439,6 +439,4 @@
     YOU ARE IN LOCATIONS IDENTIFICATION TAB
 </div>
 
-<div id="tab3" class="tabcontent">
-    YOU ARE IN QUOTA MANAGEMENT TAB
-</div>
+<quotaManagement id="tab3" class="tabcontent"></quotaManagement>
