--- a/app/geofencingModel/geofencingModel.component.html
+++ b/app/geofencingModel/geofencingModel.component.html
@@ -2,7 +2,8 @@
     <div *ngFor="#trafficTypeOption of trafficTypesOptions" class="spacing">
         <tr >
             <td class="firstTd">
-                <input [value]="trafficTypeOption.id" [checked]="trafficTypeOption.id == selectedTrafficType"  (change)="updateSelectedTrafficType($event)" name="trafficType" type="radio">{{ trafficTypeOption.name }}
+                <input [value]="trafficTypeOption.id" [checked]="trafficTypeOption.id == selectedTrafficType"  (change)="updateSelectedTrafficType($event)" name="trafficType" type="radio">
+                <div class="optionLabel">{{ trafficTypeOption.name }}</div>
             </td>
             <td class="secondTd">{{ trafficTypeOption.description }}</td>
         </tr>
