--- a/app/quotaManagement/quotaManagement.component.css
+++ b/app/quotaManagement/quotaManagement.component.css
@@ -8,6 +8,36 @@
     width:500px
 }
 .spacing{
-    margin-bottom: 20px;
+    margin-bottom: 35px;
 }
-
+.selectedCategoriesTable{
+    cellspacing: 20px;
+}
+.allTexts{
+    font-family:Calibri;
+}
+.allLabels{
+    color: #7F7F7F;
+}
+.sectionLabel{
+    width: 15%;
+    font-size: 21.33px;
+}
+.optionLabel{
+    width: 100%;
+    display: inline;
+    font-size: 18.66px;
+}
+.descriptionText{
+    font-size: 14px;
+    color: #969696;
+}
+.categoryNameLabel{
+    font-size: 17.33px;
+}
+.categoryColumn{
+    padding-left: 10px;
+}
+.categoryRow{
+    height: 50px;
+}
